--- a/index.html
+++ b/index.html
@@ -12,16 +12,17 @@
   </head> 
   <body>
     <!-- Your HTML Goes Here -->
-    <span class = 'topleft'>
-    <div class = "letter">C</div>
-    <div class = "letter">S</div>
-    <div class = "letter">E</div>
-  </span>
-  
-    <span class = 'br'>
-    <div class = "number">1</div>
-    <div class = "number">8</div>
-    <div class = "number">3</div>
-  </span>
+    <div class = 'topleft'>
+      <div class = "letter">C</div>
+      <div class = "letter">S</div>
+      <div class = "letter">E</div>
+    </div>
+
+    <div class = 'bottomright'>
+      <div class = "number">1</div>
+      <div class = "number">8</div>
+      <div class = "number">3</div>
+    </div>
+
   </body> 
 </html>
