Changed default to basic

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <!-- Comment in/out the Style Sheets as you work on them -->
-      <!-- <link href="basic.css" rel="stylesheet" />  -->
+      <link href="basic.css" rel="stylesheet" /> 
       <!-- <link href="advanced.css" rel="stylesheet" />  -->
-      <link href="stretch.css" rel="stylesheet" /> 
+      <!-- <link href="stretch.css" rel="stylesheet" />  -->
      
       <title> CSE183 Assignment 1 Santosh Lakshman </title>
   </head> 
